docs/v7.1/properties/P103.md
---
layout: page
title: P103 a eu pour raison d'être (a été la raison d'être de)
titleEn: P103 was intended for (was intention of) - a eu pour raison d'être (a été la raison d'être de)
permalink: /v7.1/proprietes/P103
sidebar: v71
group: proprietes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Domaine</strong></td>
<td class="en">
<p>E71 Human-Made Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E71_Chose_élaborée_par_l’humain</code></p>
</td>
</tr>
<tr>
<td><strong>Portée</strong></td>
<td class="en">
<p>E55 Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E55_Type</code></p>
</td>
</tr>
<tr>
<td><strong>Sous-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Super-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Quantification</strong></td>
<td class="en">
<p>many to many (0,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs (0,n:0,n)</p>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This property links an instance of E71 Human-Made Thing to an instance of E55 Type describing its intended usage. </p>
<p>It creates a relation between specific human-made things, both physical and immaterial, to types of intended methods and techniques of use. Note: A link between specific human-made things and a specific use activity should be expressed using <em>P19</em> <em>was intended use of (was made for).</em></p>
</td>
<td>
<p>Cette propriété lie une instance de <code class="language-plaintext highlighter-rouge">E71_Chose_élaborée_par_l’humain</code> à une instance de <code class="language-plaintext highlighter-rouge">E55_Type</code> qui décrit son utilisation prévue.</p>
<p>La propriété <code class="language-plaintext highlighter-rouge">P103_a_eu_pour_raison_d’être (a_été_la_raison_d’être_de)</code> crée une relation entre des choses matérielles ou immatérielles spécifiques élaborées par l'humain et des types de méthodes ou de techniques d'utilisation prévues. Il est à noter que le lien entre des choses spécifiques élaborées par l'humain et une activité d'utilisation spécifique doit être exprimé en utilisant la propriété <code class="language-plaintext highlighter-rouge">P19_a_été_l’usage_prévu_de (a_été_élaboré_pour)</code>.</p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>this plate (E22) <em>was intended for</em> being destroyed at wedding reception (E55) (fictitious)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Ce plat (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>) a eu pour raison d'être (<code class="language-plaintext highlighter-rouge">P103_a_eu_pour_raison_d’être</code>) d'être détruit lors d'une réception de mariage (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (fictif)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>P103(x,y) ⇒ E71(x)</p>
<p>P103(x,y) ⇒ E55(y)</p>
</td>
<td>
<p>P103(x,y) ⇒ E71(x)</p>
<p>P103(x,y) ⇒ E55(y)</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
