docs/v7.1.3/properties/P103.md
---
layout: page
title: P103 a eu pour raison d'être (a été la raison d'être de)
titleEn: P103 was intended for (was intention of) - a eu pour raison d'être (a été la raison d'être de)
permalink: /v7.1.3/proprietes/P103
sidebar: v713
group: proprietes
date: 2024-08-28
---

**Date de création** : 2024-08-28

**Dernière mise à jour** : 2024-08-28

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E71 Human-Made Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E71_Chose_élaborée_par_l’humain</code></p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E55 Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E55_Type</code></p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>many to many (0,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs (0,n:0,n)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property links an instance of E71 Human-Made Thing to an instance of E55 Type of usage or audience. </p>
<p>It creates a relation between specific human-made things, both physical and immaterial, to E55 Types. This property can be used to specify intended methods and techniques of use or to characterise the intended audience by indicating a type of personal characteristic that everyone falling into the target audience has. </p>
<p>Note: A link between specific human-made things and a specific use activity should be expressed using <em>P19</em> <em>was intended use of (was made for).</em></p>
</td>
<td>
<p>Cette propriété lie une instance de <code class="language-plaintext highlighter-rouge">E71_Chose_élaborée_par_l’humain</code> à une instance de <code class="language-plaintext highlighter-rouge">E55_Type</code> qui décrit son utilisation ou son audience.</p>
<p>La propriété <code class="language-plaintext highlighter-rouge">P103_a_eu_pour_raison_d’être (a_été_la_raison_d’être_de)</code> crée une relation entre des choses matérielles ou immatérielles et une instance de <code class="language-plaintext highlighter-rouge">E55_Type</code>. Elle peut être utilisée pour spécifier des méthodes ou techniques d'utilisation prévues, ou encore pour qualifier une audience anticipée en indiquant un type de caractéristique personnelle que tous les membres de cette audience possèdent. </p>
<p>Note: le lien entre des choses spécifiques élaborées par l'humain et une activité d'utilisation spécifique devrait être exprimé en utilisant la propriété <code class="language-plaintext highlighter-rouge">P19_a_été_l’usage_prévu_de (a_été_élaboré_pour)</code>.</p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>This plate (E22) <em>was intended for</em> being destroyed at wedding reception (E55). (fictitious)</p>
</li>
<li><p>“Reading for life, a first book for adults and their tutors” (E28) <em>was intended for</em> adult literacy learners in the English language (E55). (Allen, 1987)</p>
</li>
<li><p>“Piglet has a bath” (E28), published on sealed plastic pages, <em>was intended for</em> young children having a bath (E55). (Milne & Shepard, 1998)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Ce plat (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>) a eu pour raison d'être (<code class="language-plaintext highlighter-rouge">P103_a_eu_pour_raison_d’être</code>) d'être détruit lors d'une réception de mariage (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (fictif)</p>
</li>
<li><p><em>Reading for life, a first book for adults and their tutors</em> (<code class="language-plaintext highlighter-rouge">E28_Objet_conceptuel</code>) avait pour audience anticipée (<code class="language-plaintext highlighter-rouge">P103_a_eu_pour_raison_d’être</code>) les adultes étudiant l'anglais (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (Allen, 1987)</p>
</li>
<li><p><em>Piglet has a bath</em> publié sous forme de livre plastifié (<code class="language-plaintext highlighter-rouge">E28_Objet_conceptuel</code>) avait pour audience anticipée (<code class="language-plaintext highlighter-rouge">P103_a_eu_pour_raison_d’être</code>) de jeunes enfants prenant leur bain (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (Milne & Shepard, 1998)<em></em></p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<ul>
<li><p>P103(x,y) ⇒ E71(x)</p>
</li>
<li><p>P103(x,y) ⇒ E55(y)</p>
</li>
</ul>
</td>
<td>
<p>P103(x,y) ⇒ E71(x)</p>
<p>P103(x,y) ⇒ E55(y)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
